tests/ui/consts/promoted-type-error-issue-133968.stderr
error[E0308]: mismatched types
  --> $DIR/promoted-type-error-issue-133968.rs:4:29
   |
LL | static STR: &'static [u8] = "a b";
   |                             ^^^^^ expected `&[u8]`, found `&str`
   |
   = note: expected reference `&'static [u8]`
              found reference `&'static str`
help: consider adding a leading `b`
   |
LL | static STR: &'static [u8] = b"a b";
   |                             +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
